added RowSerializer and RowDeserializer API